# Kalved-Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  cli.py  main.py
app/cache/: cache_service.py
app/core/: __init__.py  config.py  constants.py  database.py  logger.py  security.py
app/dependencies/: __init__.py  auth.py  db.py  rate_limit.py
app/middleware/: __init__.py  auth.py  cors.py  error_handler.py  logging.py  rate_limit.py
app/models/: __init__.py  admin.py  analytics.py  appointment.py  audit.py  base.py  chat.py  clinic.py  doctor.py  document.py  notification.py  patient.py  prescription.py  review.py  session.py  user.py
app/routers/: __init__.py  admin.py  appointments.py  auth.py  chat.py  chat_ws.py  doctors.py  health.py  patients.py  reviews.py  users.py
app/schemas/: __init__.py  admin.py  appointment.py  auth.py  chat.py  clinic.py  common.py  doctor.py  notification.py  patient.py  review.py  user.py
app/services/: __init__.py  admin_service.py  appointment_service.py  auth_service.py  chat_service.py  connection_manager.py  doctor_service.py  document_service.py  email_service.py  oauth_service.py  patient_service.py  presence_service.py  review_service.py  sms_service.py  storage_service.py  user_service.py
migrations/: env.py
tests/: conftest.py  test_admin.py  test_appointments_flow.py  test_auth.py  test_doctors.py  test_local_integration.py  test_notifications.py  test_patients.py  test_services.py  test_users.py
(+12 files in other folders)
