[project]
name = "kalved-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rupam Mahato",email = "rupammahato@kgpian.iitkgp.ac.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn[standard] (==0.24.0)",
    "sqlalchemy (==2.0.23)",
    "psycopg2-binary (==2.9.9)",
    "pydantic (==2.5.0)",
    "pydantic-settings (==2.1.0)",
    "python-jose[cryptography] (==3.3.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-multipart (==0.0.6)",
    "email-validator (==2.1.0)",
    "python-dotenv (==1.0.0)",
    "google-auth (==2.25.2)",
    "sendgrid (==6.10.0)",
    "alembic (==1.12.1)",
    "httpx (==0.25.2)",
    "aiofiles (==23.2.1)",
    "pyotp (==2.9.0)"
    ,"requests (==2.31.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]

packages = [
  { include = "app" }
]

[tool.poetry.scripts]
runserver = "app.cli:runserver"
run-tests = "app.cli:run_tests"
migrate = "app.cli:run_migrations"
init-env = "app.cli:init_env"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kalved-backend"
version = "0.1.0"
description = ""
authors = ["Rupam Mahato <rupammahato@kgpian.iitkgp.ac.in>"]
packages = [
  { include = "app" }
]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"

